fix(tooltip): Fix tooltip overflow when right side edge is hovered
- Adjust left position value
- Add 'white-space: nowrap;' to prevent line break

Fix #3254

--- a/src/scss/theme/datalab.scss
+++ b/src/scss/theme/datalab.scss
@@ -218,6 +218,7 @@ $text-font-size: 11px;
     text-align: left;
     font-size: 11px;
     -webkit-font-smoothing: antialiased;
+    white-space: nowrap;
 
     th {
         font-size: 13px;
