--- a/src/scss/theme/graph.scss
+++ b/src/scss/theme/graph.scss
@@ -228,6 +228,7 @@ rect.bb-circle, use.bb-circle {
     text-align: left;
     font-size: 12px;
     box-shadow: .5px .5px 1px #999;
+    white-space: nowrap;
 
     th {
         font-size: 12px;
