--- a/src/scss/theme/insight.scss
+++ b/src/scss/theme/insight.scss
@@ -217,6 +217,7 @@ rect.bb-circle, use.bb-circle {
     background-color: #fff;
     text-align: left;
     font-size: 11px;
+    white-space: nowrap;
 
     th {
         font-size:12px;
